<resources>
    <string name="app_name">My Usefull Locations</string>
    <string name="title_search">Search</string>
    <string name="title_map">Map</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="title_my_location">My Location</string>
    <string name="title_activity_maps_fragment">Map</string>
    <string name="usbCharge_Toast">USB Charger Plugged in</string>
    <string name="acCharge_Toast">AC Charger Plugged in</string>
    <string name="lat_view_text">Latitude: </string>
    <string name="long_view_text">Longitude: </string>
    <string name="acc_view_text">Accuracy: </string>
    <string name="altitude_view_text">Altitude: </string>
    <string name="address_view_text">Address: \n 123 FAKE STREET \n FAKE TOWN \n FAKE COUNTRY</string>
    <string name="my_current_location">My Current Location</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps_bbbb">Map</string>
    <string name="newLocation">Add A New Location</string>
    <string name="address_title">Address:</string>
    <string name="full_address_View">Country, City, Street</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="altitude">Altitude:</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="sure_text">You Are About to Delete All Of your Last Search Results, Are You Sure ?</string>
    <string name="sure_text_delete">You Are About to Delete All Of your Favorites Saved Locations, Are You Sure ?</string>
    <string name="tab1_TEXT_SEARCH">SEARCH BY TEXT</string>
    <string name="tab2_LOCATION">SEARCH NEARBY</string>
    <string name="search_hint">Search</string>
    <string name="name">Name:</string>
    <string name="distance_search_row">Distance:</string>
    <string name="instructions_heading">Add New Location:</string>
    <string name="instructions">How would you like to search for a place?</string>
    <string name="distance">Distance from me:</string>
    <string name="name_fav">Name:</string>
    <string name="add_new_location">Add New Location</string>
    <string name="location">Locations:</string>
    <string name="title_popup_welcome">WELCOME !!!</string>
    <string name="mile_km_title">What unit of measurement would you like to use?</string>
    <string name="startusing">Start Using The App</string>
    <string name="by_mile_RADIO_BTN">MILES</string>
    <string name="by_km_RADIO_BTN">KM</string>
    <string name="about_us1_welcome_View_ID">Welcome to My Useful Locations App</string>
    <string name="about_us2_explain_title_View_ID">In this app you will be able to:</string>
    <string name="about_us3_explain_search_View_ID">1. search for nearby places or by plain text</string>
    <string name="about_us4_explain_save_View_ID">2. Save places to a favorites list</string>
    <string name="about_us5_explain_functions_View_ID">3. Share place with a friend, navigate to a chosen location, view place on the map, manage the list </string>
    <string name="searching">Searching</string>
    <string name="searchingMessage">Searching... Please Wait...</string>
    <string name="save">SAVE</string>
    <string name="settings_popup">No Changes Where Set</string>
    <string name="action_delete">Delete All List</string>
    <string name="sure_text_delete_one_fav">You about to delete this Place from your Favorites Location List !!</string>
    <string name="place_name_delete_one_fav">Place Name:</string>
    <string name="are_you_sure_delete_one_fav">ARE YOU SURE ?</string>
    <string name="off_line">Your app is running in Offline Mode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="add_to_fav">Add To Favorites</string>
    <string name="km"> km</string>
    <string name="miles"> ml</string>
    <string name="place_added">Place was added to favorites</string>
    <string name="no_places_found_json">No Places Found</string>
    <string name="select_action">Select an Action</string>
    <string name="title_popup_nearby_bank">Banks</string>
    <string name="radius_title">Choose the Radius for Searching Nearby:</string>
    <string name="radius1_RADIO_BTN">1000</string>
    <string name="radius2_RADIO_BTN">2000</string>
    <string name="radius5_RADIO_BTN">5000</string>
    <string name="radius10_RADIO_BTN">10000</string>
    <string name="set_radius_ET_HINT">2000 = 2 ml</string>
    <string name="title_nearby_selection">CATEGORIES</string>
    <string name="atm">ATM</string>
    <string name="restaurant">Restaurant</string>
    <string name="gym">GYM</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="supermarket">Supermarket</string>
    <string name="gas">GAS</string>
    <string name="mall">Mall</string>
    <string name="movie">Movie</string>
    <string name="coffie">Coffie Shop</string>
    <string name="cafe">Cafe</string>
    <string name="bank">Bank</string>
    <string name="beauty_salon">Beauty Salon</string>
    <string name="bus_station">Bus Station</string>
    <string name="bar">Bar</string>
    <string name="campground">Camping</string>
    <string name="police">Police</string>
    <string name="parking">Parking</string>
    <string name="zoo">Zoo</string>
    <string name="fire_station">Fire Station</string>
    <string name="synagogue">Synagogue</string>
    <string name="no_connection">No Internet Connection Identified</string>
    <string name="no_connection_message_offline">App will work in Offline mode</string>
    <string name="understand">I Understand</string>
    <string name="no_gps_connection">No GPS Service Identified</string>
    <string name="no_gps_connection_worning">Nearby Search and other features will Not Work Properly !!</string>
    <string name="nearby_chsen_type">You Chose to look for:</string>
    <string name="place_added_to_fav">Place added to your favorites</string>
    <string name="navigate">Navigate</string>

</resources>
