<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_editor_absoluteY="81dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_settings_POP_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/mile_km_title"
            android:textSize="16sp"
            android:textStyle="italic" />


        <RadioGroup
            android:id="@+id/miles_km_GR_ID"
            android:layout_below="@+id/title_settings_POP_ID"
            android:layout_width="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp">
            <RadioButton
                android:id="@+id/km_RB_settings_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/by_km_RADIO_BTN" />
            <RadioButton
                android:id="@+id/miles_RB_settings_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/by_mile_RADIO_BTN" />


        </RadioGroup>

        <TextView
            android:id="@+id/title_settings_radius_POP_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:layout_below="@+id/miles_km_GR_ID"
            android:text="@string/radius_title"
            android:textSize="16sp"
            android:textStyle="italic" />


        <RadioGroup
            android:id="@+id/radius_GR_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_settings_radius_POP_ID"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/radius1000_GR_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radius1_RADIO_BTN" />

            <RadioButton
                android:id="@+id/radius2000_GR_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radius2_RADIO_BTN" />

            <RadioButton
                android:id="@+id/radius5000_GR_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radius5_RADIO_BTN" />

            <RadioButton
                android:id="@+id/radius10000_GR_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/radius10_RADIO_BTN" />

            <EditText
                android:id="@+id/radius_choose_settings_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/set_radius_ET_HINT"
                android:inputType="numberDecimal"
                android:textSize="12sp" />
        </RadioGroup>


        <Button
            android:id="@+id/saveBtn_POP_settings_ID"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/save"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_below="@+id/radius_GR_ID"
            android:layout_width="match_parent"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>