<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="30dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/Sure_dialog_text_DEL_One_Fav_ID"
                android:text="@string/sure_text_delete_one_fav"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/conf_one_fav"
                android:textStyle="bold"
                android:textSize="16sp"
                android:padding="5dp"
                android:layout_below="@+id/Sure_dialog_text_DEL_One_Fav_ID"
                android:text="@string/are_you_sure_delete_one_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/cancelBtn_Dialog_DEL_One_Fav_ID"
                android:background="@color/colorPrimary"
                android:text="@string/cancel"
                android:padding="5dp"
                android:layout_marginTop="19dp"
                android:layout_below="@+id/conf_one_fav"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/deleteBtn_Dialog_DEL_One_Fav_ID"
                android:background="@color/colorPrimary"
                android:text="@string/delete"
                android:layout_marginTop="19dp"
                android:layout_below="@+id/conf_one_fav"
                android:layout_alignBottom="@+id/cancelBtn_Dialog_DEL_One_Fav_ID"
                android:layout_alignParentRight="true"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>