<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView_list_row_Fav_ID"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_edge"
            android:padding="15dp">

            <TextView
                android:id="@+id/name_row_Fav_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_fav"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/address_Full_row_Fav_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_row_Fav_ID"
                android:paddingTop="5dp"
                android:text="@string/full_address_View"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/latitude_row_Fav_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_Full_row_Fav_ID"
                android:paddingTop="5dp"
                android:text="@string/latitude"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/longitude_row_Fav_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/latitude_row_Fav_ID"
                android:paddingTop="5dp"
                android:text="@string/longitude"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/distance_row_Fav_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/longitude_row_Fav_ID"
                android:paddingTop="5dp"
                android:text="@string/distance"
                android:textSize="12sp" />
            <ImageView
                android:id="@+id/imageView_row_Fav_ID"
                android:layout_width="80dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/no_image_available"
                android:paddingTop="5dp"
                android:layout_height="80dp" />


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/imageView_row_Fav_ID"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/searchBtn_row_Fav_ID"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="25dp"

                    android:background="@android:drawable/ic_menu_search" />

                <Button
                    android:id="@+id/infoDetailsBtn_row_Fav_ID"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_dialog_info" />

            </TableRow>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>