<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LocationDetailsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <TextView
                android:id="@+id/address_title_DET_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_title"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/address_Full_DET_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_title_DET_ID"
                android:paddingTop="5dp"
                android:text="@string/full_address_View"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/latitude_DET_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address_Full_DET_ID"
                android:paddingTop="5dp"
                android:text="@string/latitude"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/longitude_DET_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/latitude_DET_ID"
                android:paddingTop="5dp"
                android:text="@string/longitude"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/altitude_DET_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/longitude_DET_ID"
                android:paddingTop="5dp"
                android:text="@string/altitude"
                android:textSize="12sp" />


            <TableRow
                android:id="@+id/table_Row_DET_ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/altitude_DET_ID"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:paddingTop="7dp"
                android:layout_alignParentEnd="true">

                <Button
                    android:id="@+id/sms_Btn_DET_ID"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:drawable/ic_dialog_email"
                    android:layout_marginRight="15dp" />

                <Button
                    android:id="@+id/Cancel_Btn_DET_ID"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_menu_revert" />


            </TableRow>



        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>